<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_mqtt_bridge</name>
  <version>0.0.0</version>
  <description>MQTT to ROS 2 Nav2 bridge for multi-robot fleet control</description>
  <maintainer email="vss.viswatejabottu@gmail.com">viswa</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  
  <!-- Launch file dependencies -->
  <exec_depend>remroc</exec_depend>
  <exec_depend>remroc_robots</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
